# SwarmBaseCode-ROS

./: .gitignore  .gitmodules  .travis.yml  CODEOWNERS  README.md  cleanup.sh  license.txt  nohup.out  recruitment-demo.md  run.sh  run_headless_sim.sh  run_simulation.sh  run_tests.sh
src/abridge/: CMakeLists.txt  package.xml
src/abridge/include/: usbSerial.h
src/abridge/src/: abridge.cpp  usbSerial.cpp
src/behaviours/: CMakeLists.txt  package.xml
src/behaviours/include/: Action.hpp  AlignToCube.hpp  ApproachCube.hpp  AvoidNest.hpp  BehaviorManager.hpp  DropOffCube.hpp  Heading.hpp  ObstacleBehavior.hpp  PID.hpp  PickUpCube.hpp  Point.hpp  ROSTimer.hpp  RobotInterface.hpp  Sensors.hpp  StraightLineBehavior.hpp  SwarmieInterface.hpp  SwarmieSensors.hpp  Tag.hpp  Timer.hpp  Velocity.hpp
src/behaviours/src/: Action.cpp  AlignToCube.cpp  AlignToCube.hpp  ApproachCube.cpp  AvoidNest.cpp  AvoidNest.hpp  Behavior.cpp  BehaviorManager.cpp  BehaviorManager.hpp  Controller.h  DriveController.cpp  DriveController.h  DropOffController.cpp  DropOffController.h  DropOffCube.cpp  Heading.cpp  JUAV_Behavior.cpp  LogicController.cpp  LogicController.h  ManualWaypointController.cpp  ManualWaypointController.h  ObstacleBehavior.cpp  ObstacleBehavior.hpp  ObstacleController.cpp  ObstacleController.h  PID.cpp  PID.h  PickUpController.cpp  PickUpController.h  PickUpCube.cpp  PickUpCube.hpp  Point.cpp  Point.h  PositionPublisher.cpp  PositionPublisher.hpp  ROSAdapter.cpp  ROSTimer.cpp  RangeController.cpp  RangeController.h  Result.h  (+13 more)
src/behaviours/test/: MockTimer.hpp  action_test.cpp  action_util.cpp  action_util.hpp  align_to_cube_test.cpp  approach_cube_test.cpp  avoid_nest_test.cpp  heading_test.cpp  obstacle_test.cpp  pickup_test.cpp  point_test.cpp  straight_line_test.cpp  test.cpp  test_util.cpp  test_util.h  velocity_test.cpp  waypoint_test.cpp
src/diagnostics/: CMakeLists.txt  package.xml
src/diagnostics/src/: Diagnostics.cpp  Diagnostics.h  WirelessDiags.cpp  WirelessDiags.h  driver.cpp
src/gazebo_plugins/: CMakeLists.txt  package.xml
src/gazebo_plugins/src/: SetupWorld.cpp  simple_world_plugin.cpp
src/mobility/: CMakeLists.txt  package.xml
src/mobility/src/: .mobility.cpp.swp  Controller.h  DriveController.cpp  DriveController.h  DropOffController.cpp  DropOffController.h  LogicController.cpp  LogicController.h  ObstacleController.cpp  ObstacleController.h  OldCode.cpp  PID.cpp  PID.h  PickUpController.cpp  PickUpController.h  SearchController.cpp  SearchController.h  StandardVars.h  apriltag_coordinates.txt  mobility.cpp  obstaclecontoller.cpp  obstaclecontoller.h
src/obstacle_detection/: CMakeLists.txt  package.xml
src/obstacle_detection/src/: obstacle.cpp
src/rover_driver_rqt_mcp/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  plugin.xml  plugin.xml~  setup.py~
src/rover_driver_rqt_mcp/include/: rover_mcp.h
src/rover_driver_rqt_mcp/scripts/: rover_driver_rqt_mcp
src/rover_driver_rqt_mcp/src/: rover_mcp.cpp
src/rover_driver_rqt_monitor/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  package.xml  package.xml~  plugin.xml  plugin.xml~  setup.py  setup.py~
src/rover_driver_rqt_monitor/resource/: KurtsRobotSteering.ui~  RobotSteering.ui~  RoverDriverRqtDrums.ui~  RoverDriverRqtMonitor.ui  RoverDriverRqtWhere.ui~
src/rover_driver_rqt_monitor/scripts/: rover_driver_rqt_drums~  rover_driver_rqt_monitor  rover_driver_rqt_monitor~  rover_driver_rqt_where~
src/rover_driver_rqt_motor/: CMakeLists.txt  CMakeLists.txt~  package.xml  plugin.xml~
src/rover_driver_rqt_motor/include/: #rover_motor.h#
src/rover_driver_rqt_motor/src/: #rover_motor.cpp#  joystick_driver.cpp  rover_motor.cpp
src/rover_driver_rqt_ptp/: CMakeLists.txt  package.xml
src/rover_driver_rqt_ptp/include/: rover_ptp.h
src/rover_driver_rqt_ptp/src/: rover_ptp.cpp
src/rover_driver_world_state/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_driver_world_state/logs/: swarmieTestLog-20150303_15:20:39.csv  swarmieTestLog-20150304_10:27:19.csv  swarmieTestLog-20150304_10:29:54.csv  swarmieTestLog-20150304_10:33:38.csv  swarmieTestLog-20150304_10:38:57.csv  swarmieTestLog-20150304_10:46:45.csv  swarmieTestLog-20150304_10:52:37.csv  swarmieTestLog-20150304_10:54:42.csv  swarmieTestLog-20150304_11:02:04.csv  swarmieTestLog-20150304_11:38:12.csv  swarmieTestLog-20150305_11:35:56.csv  swarmieTestLog-20150305_11:39:28.csv  swarmieTestLog-20150305_11:52:35.csv  swarmieTestLog-20150305_12:10:06.csv  swarmieTestLog-20150305_12:20:39.csv  swarmieTestLog-20150305_12:29:01.csv  swarmieTestLog-20150305_12:31:06.csv  swarmieTestLog-20150305_13:57:55.csv  swarmieTestLog-20150305_14:53:26.csv
src/rover_driver_world_state/msg/: ATag.msg~
src/rover_driver_world_state/src/: world_state (3rd copy).cpp  world_state (copy).cpp  world_state.cpp  world_state.cpp~
src/rover_driver_world_state/srv/: trackPheromone.srv  trackPheromone.srv~  updateMap.srv
src/rover_onboard_abridge/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_onboard_abridge/include/: usbSerial.h
src/rover_onboard_abridge/src/: abridge (copy).cpp  abridge.cpp  abridge.cpp~  (+2 more)
src/rover_onboard_battery/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_onboard_gps/: CMakeLists.txt  package.xml
src/rover_onboard_health_status/: CMakeLists.txt  package.xml
src/rover_onboard_localization/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_onboard_mapping/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_onboard_mobility/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rover_onboard_obstacle_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/rover_onboard_path_planning/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/rover_onboard_target_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/rqt_rover_gui/: BWTabWidget.cpp  BWTabWidget.h  CMakeLists.txt  CMakeLists.txt.user.65a1215  CMakeLists.txt.user.d08a2ff  MapData.h  package.xml  plugin.xml  setup.py
(+1706 files in other folders)
