<?xml version="1.0"?>
<package>
  <name>diagnostics</name>
  <version>0.0.0</version>
  <description>The diagnostics package</description>
  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
 </package>
