<?xml version="1.0"?>
<package>
  <name>rover_onboard_health_status</name>
  <version>0.0.0</version>
  <description>The rover_onboard_health_status package</description>

  <maintainer email="swampworks1@todo.todo">swampworks1</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
