<?xml version="1.0"?>
<package>
  <name>rover_onboard_mobility</name>
  <version>0.0.0</version>
  <description>The rover_onboard_mobility package</description>

  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rover_onboard_target_detection</build_depend>
  <build_depend>rover_driver_world_state</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rover_onboard_target_detection</run_depend>
  <run_depend>rover_driver_world_state</run_depend>


  <export>

  </export>
</package>
